# OmniDesk

./: .gitignore  README.md  pyproject.toml
src/: config.py  eval_hr.json  eval_it.json  evaluate.py  graph.py  ingest_hr.py  ingest_it.py  qdrant_utils.py  retrieval.py
